# hbr_uhbw

./: .gitignore  404.html  README.adoc  README.md  alternative_forms.md  antora-playbook.yml  index.html  intended_purpose.md  objects.inv  preexisting_solutions.md
arc_hbr/: index.html
data_sources/: index.html
design/: index.html
docs/: 00_all.adoc  01_intended_purpose.adoc  04_alternative_risk_scores.md  Makefile  README.adoc  README.md  admonition.lua  all.adoc  alternative_forms.adoc  antora.yml  arc_hbr.adoc  arc_hbr_summary.csv  dapt_predictors.csv  index.adoc  intended_purpose.adoc  issue.md  main.adoc  notes.adoc  preexisting_solutions.adoc  ref.bib  specifications.adoc  test.adoc  word_doc.adoc
modelling/: index.html
prototypes/: test.py  (+8 more)
pyhbr/: README.md  mkdocs.yml  pyproject.toml  requirements.txt
pyhbr/docs/: arc_hbr.md  design.md  index.md  modelling.md  reference.md
pyhbr/src/pyhbr/: common.py  example.py
pyhbr/src/pyhbr/analysis/: acs.py  arc_hbr.py  calibration.py  describe.py  dim_reduce.py  fit.py  model.py  roc.py  stability.py
pyhbr/src/pyhbr/clinical_codes/: __init__.py  counting.py
pyhbr/src/pyhbr/clinical_codes/codes_editor/: codes_editor.py
pyhbr/src/pyhbr/clinical_codes/files/: icd10.yaml  icd10_arc_hbr.yaml  icd10_blank.yaml  icd10_test.yaml  opcs4.yaml  opcs4_arc_hbr.yaml
pyhbr/src/pyhbr/data_source/: __init__.py  hes.py  hic.py  hic_icb.py  icb.py
pyhbr/src/pyhbr/middle/: from_hic.py  from_icb.py
pyhbr/src/pyhbr/tools/: fetch_data.py  generate_report.py  get_csv.py  make_results.py  plot_describe.py  run_model.py
(+115 files in other folders)
