[project]
name = "pyhbr"
version = "0.0.1"
authors = [
  { name="John Scott", email="john.scott@uhbw.nhs.uk" },
]
description = "Tools for bleeding/ischaemia risk prediction in PCI patients"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "sqlalchemy",
  "pandas",
]

[project.urls]
Homepage = "https://github.com/jrs0/hbr_uhbw"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]